...
            android:paddingEnd="16dp"
            android:inputType="textPassword"
            android:singleLine="true"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/btnSignup"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@drawable/bg_button_dark"
            android:text="Crear Cuenta"
            android:textColor="@color/white"
            android:textSize="16sp"
...
