...
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginBottom="16dp" />

                <EditText
                    android:id="@+id/etSearchLanding"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:background="@drawable/bg_input_auth"
                    android:hint="Ingrese Libro"
                    android:textColorHint="@color/stone"
                    android:textColor="@color/navy"
...
